[project]
name = "intersight-auth"
version = "0.3.2"
description = "Intersight Authentication helper for requests"
authors = [
    {name = "Chris Gascoigne", email="cgascoig@cisco.com"},
]
readme = "README.md"
requires-python = ">=3.9"
dynamic = ["dependencies"]

[project.urls]
repository = "https://github.com/cgascoig/intersight-auth"

[tool.poetry.dependencies]
cryptography = ">37.0.2,<45.0"
requests = "^2.27.1"
oauthlib = "^3.2.2"

[tool.poetry.group.dev.dependencies]
responses = "^0.25.3"
types-requests = "^2.32.0.20241016"
types-oauthlib = "^3.2.0.20240806"
pytest = ">7.1.2"
black = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
